[tool.poetry]
name = "jax-ppo"
version = "0.1.0"
description = "JAX Implimentation of Proximal Policy Optimisation Algorithm"
authors = ["zombie-einstein <zombie-einstein@proton.me>"]
readme = "README.md"
packages = [{include = "jax_ppo"}]
homepage = "https://github.com/zombie-einstein/JAX-PPO"
repository = "https://github.com/zombie-einstein/JAX-PPO"
keywords = ["jax", "rl", "ppo"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flax = "^0.8.2"
distrax = "^0.1.5"
jax-tqdm = "0.1.2"
gymnax = "^0.0.8"
scipy = ">=1.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
taskipy = "^1.10.3"
pytest = "^7.2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest", help="Run tests"}
lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
